[package]
name = "axum_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.83"
axum = "0.7.7"
axum-extra = "0.9.4"
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
lettre = "0.11.10"
serde = "1.0.213"
serde_json = "1.0.132"
sqlx = "0.8.2"
time = "0.3.36"
tokio = "1.41.0"
tower = "0.5.1"
tower-http = "0.6.1"
tracing-subscriber = "0.3.18"
uuid = "1.11.0"
validator = "0.18.1"
